[gd_scene load_steps=2 format=3 uid="uid://buvp8qllgei40"]

[ext_resource type="Script" uid="uid://dmt27gua7rm48" path="res://Global/setting_menu.gd" id="1_ejs73"]

[node name="SettingMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ejs73")

[node name="CloseButton" type="Button" parent="."]
layout_mode = 0
offset_left = 130.0
offset_top = 90.0
offset_right = 376.0
offset_bottom = 196.0
theme_override_font_sizes/font_size = 48
text = "Close
"

[node name="BackToMenuButton" type="Button" parent="."]
layout_mode = 0
offset_left = 865.0
offset_top = 90.0
offset_right = 1111.0
offset_bottom = 196.0
theme_override_font_sizes/font_size = 48
text = "Exit to menu
"

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -200.0
offset_right = 320.0
offset_bottom = 208.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -374.5
offset_top = -130.0
offset_right = 374.5
offset_bottom = 130.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer"]
custom_minimum_size = Vector2(0, 128)
layout_mode = 2

[node name="Label" type="Label" parent="Control/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 48
text = "Music volume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="Control/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MusicSlider" type="HSlider" parent="Control/VBoxContainer/HBoxContainer/Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -105.5
offset_top = -8.0
offset_right = 105.5
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
min_value = -20.0
max_value = 10.0

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/VBoxContainer"]
custom_minimum_size = Vector2(0, 128)
layout_mode = 2

[node name="Label" type="Label" parent="Control/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 48
text = "Sfx volume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control2" type="Control" parent="Control/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SfxSlider" type="HSlider" parent="Control/VBoxContainer/HBoxContainer2/Control2"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -105.5
offset_top = -8.0
offset_right = 105.5
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
min_value = -20.0
max_value = 10.0

[connection signal="pressed" from="CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="BackToMenuButton" to="." method="_on_back_to_menu_button_pressed"]
[connection signal="value_changed" from="Control/VBoxContainer/HBoxContainer/Control/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="Control/VBoxContainer/HBoxContainer2/Control2/SfxSlider" to="." method="_on_sfx_slider_value_changed"]
